# ConfigGenerator

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.deploy/nginx/: Dockerfile
.deploy/nginx/conf.d/: host.conf
.github/workflows/: docker.yml
generators/: __init__.py  models.py  utils.py
generators/docker_compose/: __init__.py  docker-compose.template.yml
generators/elk_docker_compose/: elk_docker_compose.py
generators/grafana/: __init__.py  dashboard.yaml  grafana_dashboards.py  grafana_ini.template.txt  grafana_ini.template.yml  prometheus.template  readme.md
generators/prometheus/: __init__.py  prometheus.template  ransomeware.node.rules.template.yml
generators/proxy_manager/: __init__.py  default_rules.py
